--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,86 @@
     font-style: normal;
     font-display: swap;
 }
+.head-text {
+   position: relative;
+}
+.text-on-image {
+  position: absolute;
+  color: white;
+  text-align: center;
+  top: 25px;
 
+}
+.text-on-image h3{
+    font-size: 35px;
+    text-align: center;
+}
+.text-on-image p{
+    font-size: 25px;
+    text-align: center;
+}
+.containers {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  justify-content: space-evenly;
+}
+.store-info{
+    background-color: #f5f5f5;
+    padding: 20px;
+    width: 20%;
+
+}
+.store-hours{
+    background-color: #f5f5f5;
+    width: 20%;
+    padding: 20px;
+}
+.static-map
+{
+    width: 60%;
+}
+.about-content{
+    margin-top: 20px;
+    margin-left: 80px;
+    display: flex;
+
+}
+.about-content .about-title{
+    font-size: 35px;
+
+}
+.about-content .about-data{
+    margin-left: 20px;
+    width: 60%;
+
+}
+.about-content .about-image{
+   width: 35%;
+
+}
+.featured h2{
+    font-size: 35px;
+    text-align: center;
+
+}
+.featured{
+margin-top: 20px;
+
+}
+.photo-slider{
+    margin: 20px;
+    background-color: #f5f5f5;
+    align-content: center;
+}
+.faq-content{
+    margin: 30px;
+    
+}
+.faq-title{
+font-size: 35px;
+text-align: center;
+}
 
 /* Base */
 html {
@@ -268,7 +347,8 @@ nav[aria-label="Pagination"] button:disabled{
 
 /* Footer */
 .footer {
-    @apply bg-footer-bg-color text-footer-text-color py-12 
+    background-color: #f5f5f5;
+     
 }
 
 .footerLogo {
